# ClearVid

./: .gitignore  README.md  README.zh-CN.md  Start_ClearVid_GUI.bat  VIDEO_UPSCALER_DESIGN.md  pyproject.toml  test_perf.py  test_pipeline.py
.claude/: settings.local.json
.github/skills/implement-enhancement/: SKILL.md
.github/workflows/: set-repo-metadata.yml
clearvid/app/: __init__.py  _gui_old.py.bak  cli.py  config.py  export_control.py  gui.py  orchestrator.py  pipeline.py  recommend.py  recommendation_rules.py  task_queue.py
clearvid/app/bootstrap/: __init__.py  dep_installer.py  env_detect.py  launcher.py  paths.py  weight_manager.py
clearvid/app/gui/: __init__.py  _helpers.py  crash_logging.py  estimation.py  export_panel.py  file_panel.py  history_dialog.py  main_window.py  naming.py  onboarding.py  preset_cards.py  preview_panel.py  queue_worker.py  safety_checks.py  settings_dialog.py  theme.py  trt_manager_dialog.py  user_settings.py  (+1 more)
scripts/: ClearVid.spec  build_dist.ps1  build_exe.ps1  clearvid_entry.py  start_clearvid.ps1
tests/: test_bootstrap_env_detect.py  test_bootstrap_paths.py  test_config.py  test_dep_installer.py  test_export_control.py  test_frame_skipper.py  test_pipeline.py  test_postprocess_enhance.py  test_postprocess_temporal_stabilizer.py  test_preprocess_filters.py  test_preview_worker.py  test_probe.py  test_queue_worker.py  test_realesrgan_stream_processes.py  test_recommend.py  test_schemas_models.py  test_split_preview.py  test_stream_codec.py  test_subprocess_utils.py  test_tensorrt_engine.py
weights/: README.zh-CN.md
(+20 files in other folders)
